    formats.
    (Issue 203)
  * streamIO: many readers can directly use gzip- or bzip2 compressed
    files or a stream (such as cStringIO.StringIO) wrapped in
    util.NamedStream; currently supported: PDB, PSF, CRD, PQR, PDBQT,
    GRO, MOL2, XYZ
  * Added hydrogen bonding time autocorrelation analysis module
    (analysis.hbonds.HydrogenBondAutoCorrel)

  Changes

  * __getstate__() and __setstate__() raise an NotImplementedError for
    Universe and AtomGroup; before they were silently accepted on
    pickling and a cryptic "TypeError: AtomGroup is not callable" was
    raised (see also Issue 173 for detailed explanation)
  * XTC/TRR reader raise IOError with errorcode EIO (instead of
    ENODATA) when the last frame is reached and EBADF (instead of
    EFAULT) for any other issues (partially addresses Issue 150,
    Windows compatibility)
  * Universe.bonds now returns a TopologyGroup not a list.  TopologyGroup can be
    iterated over; list(universe.bonds) should provide a fix to legacy code.
  * PQR reader will now set segid to a chainID if found in the PQR
    file (previously, the segid would always be set to 'SYSTEM').
  * util.anyopen() only returns the stream and not the tuple (stream,
    filename) anymore; it tries to set stream.name instead
  * topology reading now done via classes (similar to trajectory reading)
    rather than functions.
    (Issue 210)


  Fixes

  * fixed creation of residues and segments in Merge() 
  * resolves Issue 188 regarding Helanal Finish Argument
  * fixed Issue 184 (TPR files with double precision)
  * fixed Issue 199 (FutureWarning in pyqcprot)


04/01/14  orbeckst, jandom, zhuyi.xue, xdeupi, tyler.je.reddy,
          manuel.nuno.melo, danny.parton, sebastien.buchoux, denniej0,
	  rmcgibbo, richardjgowers, lennardvanderfeltz, bernardin.alejandro
          matthieu.chavent

  * 0.8.1

  (Note: 0.8.0 contains a subset of these changes; 0.8.0 is deprecated)

  Enhancements
