@@ -63,6 +63,7 @@ The rules for this file:
     GRO, MOL2, XYZ
   * Added hydrogen bonding time autocorrelation analysis module
     (analysis.hbonds.HydrogenBondAutoCorrel)
+  * Added energy units to core.units (Issue 214)
 
   Changes
 
